--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,5 +1,62 @@
-All orders
+      <ul class='breadcrumb'>
+        <li>
+          <%= link_to "Home", "/" %>
+          <span class='divider'>/</span>
+        </li>
+        <li class='active'>
+          My Account
+        </li>
+      </ul>
+      <div class='row-fluid'>
+        <div class='tabbable'>
+          <ul class='nav nav-tabs'>
+            <li>
+              <a data-toggle='tab' href='#'>Profile</a>
+            </li>
+            <li class='active'>
+              <a data-toggle='tab' href='#'>Past Orders</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class='row-fluid'>
+        <div class='span12'>
+          <table class='table table-striped table-bordered cart-detail'>
+            <thead>
+              <tr>
+                <th class='span4'>Order Number</th>
+                <th class='span3'>Date Ordered</th>
+                <th class='span2'>Order Total</th>
+                <th class='span3'>Status</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% @orders.each do |order| %>
+              <tr>
+                <td>
+                  <%= link_to order.id, order_path(order) %>
+                </td>
+                <td>
+                  <%= (order.created_at).to_date.strftime("%B %-d, %Y") %>
+                </td>
+                <td>
+                  <%= number_to_currency(order.total_price) %>
+                </td>
+                <td>
+                  <%= order.status %>
+                </td>
+              </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+
+
+
+
+<%#All orders
 
 <% @orders.each do |order| %>
-  <p><%= link_to order.id, order_path(order) %></p>
-<% end %>
+ <%# <p><%= link_to order.id, order_path(order) %>
+<%#<% end %>
