--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,7 +14,7 @@
             <% else %>
               <% user_name = current_user.full_name %>
             <% end %>
-            <li><%= "Logged in as #{user_name}" %></li>
+            <li><%= link_to "Logged in as #{user_name}", user_path(current_user) %></li>
             <li><%= link_to "My Account", user_path(current_user) %></li>
             <li><%= link_to "Logout", logout_path %></li>
           <% else %>
