--- a/app/views/orders/checkout_funnel.html.haml
+++ b/app/views/orders/checkout_funnel.html.haml
@@ -1,15 +1,16 @@
-%h3 How would you like to Checkout?
-#login
-  .span6.offset3
-    %h4 Sign-Up
-    = link_to "Not registered? Sign up here", new_user_path
-    %h4 Login
-    = simple_form_for :sessions, :url => sessions_path, :html => {:class => 'bs-container'} do |f|
-      = f.error_notification
-      = f.input :email
-      = f.input :password
-      = f.button :submit, :value => "Log In", :class => "btn btn-primary"
-      = f.error :base
-#login
-  .span6.offset3
-    = link_to "Checkout as Guest", checkout_path(current_store, {:guest => true}), method: :get, :class => "btn btn-primary pull-right"
+-cache ("checkout-funnel") do
+  %h3 How would you like to Checkout?
+  #login
+    .span6.offset3
+      %h4 Sign-Up
+      = link_to "Not registered? Sign up here", new_user_path
+      %h4 Login
+      = simple_form_for :sessions, :url => sessions_path, :html => {:class => 'bs-container'} do |f|
+        = f.error_notification
+        = f.input :email
+        = f.input :password
+        = f.button :submit, :value => "Log In", :class => "btn btn-primary"
+        = f.error :base
+  #login
+    .span6.offset3
+      = link_to "Checkout as Guest", checkout_path(current_store, {:guest => true}), method: :get, :class => "btn btn-primary pull-right"
